# micro-mate

./: .gitignore  CLAUDE.md  README.md  download_pieces.py  pyproject.toml
Projects/micro-mate/: README.md  generate_pieces.py  requirements.txt  run_with_pipx.sh
Projects/micro-mate/src/: run_game.py
Projects/micro-mate/src/micro_mate.egg-info/: PKG-INFO  requires.txt
Projects/micro-mate/src/micromate/: engine.py  pgn.py
src/: run_game.py
src/micro_mate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/micromate/: __init__.py  engine.py  pgn.py  renderer.py
tests/: test_combat.py  test_engine.py
tools/: dump_engine_fixtures.py  generate_screenshots.py  rasterize_assets.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/.vercel/: project.json
web/scripts/: gen-icons.mjs  sync-assets.mjs
web/src/: main.ts  styles.css
web/src/assets/: pieces.ts
web/src/controller/: ai-client.ts  ai-loop.ts  input.ts
web/src/engine/: ai.ts  bitboard.ts  board.ts  game.ts  index.ts  types.ts
web/src/persistence/: save.ts
web/src/pgn/: index.ts
web/src/pwa/: register.ts
web/src/render/: geometry.ts  stage.ts  themes.ts
web/src/state/: store.ts
web/src/ui/: dice.ts  modals.ts  toast.ts  topbar.ts
web/src/workers/: ai.worker.ts
web/tests/engine/: ai.test.ts  legal-order.test.ts  make-undo.test.ts  perft.test.ts  setup.test.ts  snapshot-json.test.ts
web/tests/fixtures/: engine.json
