[project]
name = "micro-mate"
version = "0.1.0"
description = "Micro-Mate (Toledo) (Python + pygame)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pygame-ce>=2.5",
  "Pillow>=9.0",
  "cairosvg>=2.6",
  "chess>=1.10",
  "thorpy>=2.1",
  "numpy>=1.20"
]

[project.scripts]
micro-mate = "run_game:main"

[tool.setuptools.package-data]
micromate = ["assets/svg/*.svg"]
